fixed question div collapsing

--- a/public/stylesheets/mixer2050/application.css
+++ b/public/stylesheets/mixer2050/application.css
@@ -153,7 +153,7 @@ body.mixer2050#scenarios_new section#left {
   margin-right: 8px;
   float: left; }
   body.mixer2050#scenarios_new section#left section#questions {
-    width: auto;
+    width: 440px;
     background-color: #fefffe;
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr="#fefffe"}, endColorstr="#e9e9e9");
     background-image: -moz-linear-gradient(center top, #fefffe, #e9e9e9);
